[Amit kumar] Add : these addition can run only get by location id