@@ -1,18 +1,16 @@
 package com.capgemini.hrmanagement.hr_portal.controller;
 
-import com.capgemini.hrmanagement.hr_portal.dto.ApiResponseDto;
-import com.capgemini.hrmanagement.hr_portal.dto.ApiResponseDtowithoutpage;
-import com.capgemini.hrmanagement.hr_portal.dto.EmployeeRegionDTO;
-import com.capgemini.hrmanagement.hr_portal.dto.RegionDTO;
+import com.capgemini.hrmanagement.hr_portal.dto.*;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.*;
 import org.springframework.web.reactive.function.client.WebClient;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/region-ui")
@@ -20,8 +18,9 @@ public class RegionPageController {
 
     private final WebClient webClient;
 
-    public RegionPageController(WebClient webClient) {
-        this.webClient = webClient;
+    public RegionPageController(WebClient.Builder webClientBuilder,
+                                @Value("${api.base.url}") String baseUrl) {
+        this.webClient = webClientBuilder.baseUrl(baseUrl).build();
     }
 
     @GetMapping
@@ -33,25 +32,24 @@ public class RegionPageController {
             @RequestParam(defaultValue = "asc") String sortDir,
             Model model) {
 
-
-        // Fetch regions from backend
-        ApiResponseDtowithoutpage<RegionDTO> regionResponse = webClient.get()
-                .uri("/api/regions")
+        ApiResponseDtowithoutpage<RegionDTO> regionResp = webClient.get()
+                .uri("/regions")
                 .retrieve()
                 .bodyToMono(new ParameterizedTypeReference<ApiResponseDtowithoutpage<RegionDTO>>() {})
                 .block();
 
-        List<String> regionNames = regionResponse.getData().stream()
-                .map(RegionDTO::getRegionName)
-                .distinct()
-                .toList(); // Optional: filter duplicates
+        List<String> regionNames = regionResp != null ?
+                regionResp.getData()
+                        .stream()
+                        .map(RegionDTO::getRegionName)
+                        .distinct()
+                        .collect(Collectors.toList())
+                : Collections.emptyList();
 
-
-        String url = String.format("/api/reports/employees-by-region/%s?page=%d&size=%d&sortBy=%s&sortDir=%s",
+        String url = String.format("/reports/employees-by-region/%s?page=%d&size=%d&sortBy=%s&sortDir=%s",
                 regionName, page, size, sortBy, sortDir);
 
-        ApiResponseDto<EmployeeRegionDTO> response = webClient
-                .get()
+        ApiResponseDto<EmployeeRegionDTO> resp = webClient.get()
                 .uri(url)
                 .retrieve()
                 .bodyToMono(new ParameterizedTypeReference<ApiResponseDto<EmployeeRegionDTO>>() {})
@@ -59,15 +57,12 @@ public class RegionPageController {
 
         model.addAttribute("regions", regionNames);
         model.addAttribute("regionName", regionName);
-
-        if (response != null && response.getData() != null) {
-            model.addAttribute("employees", response.getData().getContent());
-            model.addAttribute("regionName", regionName);
-            model.addAttribute("totalPages", response.getData().getTotalPages());
-            model.addAttribute("currentPage", response.getData().getNumber());
+        if (resp != null && resp.getData() != null) {
+            model.addAttribute("employees", resp.getData().getContent());
+            model.addAttribute("totalPages", resp.getData().getTotalPages());
+            model.addAttribute("currentPage", resp.getData().getNumber());
         } else {
-            model.addAttribute("employees", List.of());
-            model.addAttribute("regionName", regionName);
+            model.addAttribute("employees", Collections.emptyList());
         }
 
         return "employees-by-region";
